examples/compiler_errors/type_mismatch_argument.flx
fn greet(name: String) -> String {
    name
}

fn main() -> Unit {
    let ignored = greet(123)
}
